# autonomous-glm

./: .gitignore  AGENTS.md  autonomous-glm-prd.md  pyproject.toml  requirements-test.txt  requirements.txt
config/: default.yaml  development.yaml  production.yaml  staging.yaml
design_system/: components.md  standards.md  tokens.md
docs/: epic-planning-guide.md  pragmatic-engineering-init-guide.md
interfaces/: audit-complete.schema.json  design-proposal.schema.json  dispute.schema.json  handshake.schema.json  human-required.schema.json
logs/: sync-log.ndjson  watch-log.ndjson
memory-bank/: README.md  active-context.md  agent-feedback.md  audit-patterns.md  consolidated-learnings.md  mistakes.md  skill-matrix.json
scripts/: ci_gates.py  health_check.py
src/: __init__.py
task-completion-reports/: m0-1-database-schema-data-layer-completion.md  m0-2-configuration-management-completion.md  m0-3-foundation-validation-suite-completion.md  m1-1-screenshot-ingestion-completion.md  m1-2-video-ingestion-completion.md  m1-3-context-metadata-api-completion.md  m2-1-component-detection-pipeline-completion.md  m2-2-hierarchy-flow-analysis-completion.md  m2-3-token-extraction-completion.md  m3-1-database-persistence-integration-completion.md  m3-2-core-audit-framework-completion.md  m3-3-visual-audit-dimensions-completion.md  m3-4-state-accessibility-dimensions-completion.md  m4-1-phased-plan-synthesis-completion.md  m4-2-implementation-formatter-completion.md  m4-3-design-system-proposals-completion.md  m4-4-reports-persistence-completion.md  m5-1-message-infrastructure-completion.md  m5-2-agent-handshake-protocol-completion.md  m5-3-arbitration-reliability-completion.md  m6-1-cli-core-commands-completion.md  m6-2-watch-mode-auto-processing-completion.md  m6-3-dashboard-pdf-export-completion.md  m7-1-golden-dataset-creation-completion.md  m7-2-coverage-performance-testing-completion.md  m7-3-integration-tests-completion.md  m7-4-e2e-ci-pipeline-completion.md  milestone-0-1-completion-report.md  milestone-2-completion-report.md  milestone-3-completion-report.md
tasks/: aes-autonomous-glm-milestones.md  (+27 more)
(+262 files in other folders)
